@startuml

!startsub public_declaration
!ifndef ITERATOR_MODEL_PUBLIC
!define ITERATOR_MODEL_PUBLIC

namespace cds {
    namespace meta {

        interface Iterator {

        }

        interface ForwardIterator {

        }

        interface BidirectionalIterator {

        }

        interface RandomAccessIterator {

        }

        Iterator <|-- ForwardIterator
        ForwardIterator <|-- BidirectionalIterator
        BidirectionalIterator <|-- RandomAccessIterator

    }
}

!endif
!endsub

@enduml